La secure logs til fullmakt endepunkt